Webclient fix: combobox menu avoids wrap (#944).
The items in a combobox menu (as appearing in the detail panel) do not word-break.

See #944.

--- a/modules/dm4-webclient/src/main/resources/web/css/jquery-ui-overrides.css
+++ b/modules/dm4-webclient/src/main/resources/web/css/jquery-ui-overrides.css
@@ -12,12 +12,6 @@
 
 /* Note: OpenLayer's event layer has z-index 999. */
 
-.menu-container {
-    position: fixed;
-    display: none;
-    z-index: 1001;
-}
-
 .ui-menu {
     font-size: 0.875em;
     overflow: auto;
